#85 - update html of bubble groups views;

--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -26,6 +26,7 @@
   .form-alias {display:inline-block; height:30px; width:1px; margin-left:-1px; vertical-align:middle;}
   input[type=file] {display:inline-block; vertical-align:middle;}
 }
+.form-horizontal .kmSection {margin-top:35px;}
 
 .btn-simple {padding-top:5px; padding-bottom:3px; border-width:0; line-height:1em; border-radius:100px;}
 .btn-large {padding-top:10px; padding-bottom:8px; padding-left:20px; padding-right:20px;}
