--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -24,23 +24,33 @@
             </div>
           </div>
         <% end %>
-        <div class="form-group">
-          <%= f.hidden_field :classroom_id, id: 'classroom_id', value: @kid.classroom.try(:id) %>
-          <label class="col-sm-4 control-label text-main">Classroom</label>
-          <div class="col-sm-8">
-            <div class="dropdown select">
-              <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <span class="value"><%= @kid.classroom.try(:name) || @classrooms[0][1] %></span>
-                <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu dropdown-menu-right">
-                <% @classrooms.each do |cr| %>
-                  <li><a href="javascript:" data-id="<%= cr[0] %>"><%= cr[1] %></a></li>
-                <% end %>
-              </ul>
+        <% if @kid.new_record? && @kid.classroom %>
+          <div class="form-group">
+            <label class="col-sm-4 control-label text-main">Classroom</label>
+            <div class="col-sm-8">
+              <label class="col-sm-4 control-label text-main accessToken"><%= @kid.classroom.try(:name) %></label>
             </div>
           </div>
-        </div>
+        <% else %>
+          <div class="form-group">
+            <%= f.hidden_field :classroom_id, id: 'classroom_id', value: @kid.classroom.try(:id) %>
+            <label class="col-sm-4 control-label text-main">Classroom</label>
+            <div class="col-sm-8">
+              <div class="dropdown select">
+                <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="value"><%= @kid.classroom.try(:name) || @classrooms[0][1] %></span>
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-right">
+                  <% @classrooms.each do |cr| %>
+                    <li><a href="javascript:" data-id="<%= cr[0] %>"><%= cr[1] %></a></li>
+                  <% end %>
+                </ul>
+              </div>
+            </div>
+          </div>
+        <% end %>
+        <%= f.hidden_field :classroom_id, id: 'classroom_id', value: @kid.classroom.try(:id) %>
         <div class="form-group">
           <%= f.label :first_name, "First Name", class: "col-sm-4 control-label text-main" %>
           <div class="col-sm-8">
