--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -101,7 +101,7 @@
         <td></td>
         <% if can? :create, Kid %>
           <td>
-            <%= link_to new_kid_path, class: 'btn btn-info btn-simple btn-large btn-wide' do %>
+            <%= link_to new_kid_path(classroom: @current_classroom), class: 'btn btn-info btn-simple btn-large btn-wide' do %>
               <i class="fa fa-plus"></i>
               <span>Add New Student</span>
             <% end %>
