#104 :: Add/Edit Teacher Admin User

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,7 +42,7 @@
             <%= f.text_field :email, placeholder: 'Email', class: 'form-control' %>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group role">
           <%= f.label :role_id, 'Type of User',class: "col-sm-4 control-label text-main" %>
           <%= f.hidden_field :role_id, id: 'roleField', value: @user.role.try(:id) %>
           <% if @user.new_record? && @user.role %>
@@ -51,14 +51,37 @@
             </div>
           <% else %>
             <div class="col-sm-8">
-              <div class="dropdown select userRole">
+              <div class="dropdown select role">
                 <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   <span class="value"><%= @user.role.try(:name) || @roles.first.name %></span>
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right">
                   <% @roles.each do |role| %>
-                    <li><a href="javascript:" data-id="<%= role.id %>"><%= role.name %></a></li>
+                    <li><a href="javascript:" data-id="<%= role.id %>" data-name="<%= role.name %>"><%= role.name %></a></li>
+                  <% end %>
+                </ul>
+              </div>
+            </div>
+          <% end %>
+        </div>
+        <div class="form-group school <%= @user.new_record? && !@user.school ? 'hidden' : '' %>">
+          <%= f.label :school_id, 'School',class: "col-sm-4 control-label text-main" %>
+          <%= f.hidden_field :school_id, id: 'schoolField', value: @user.school.try(:id) %>
+          <% if @user.new_record? && @user.school %>
+            <div class="col-sm-8">
+              <label class="col-sm-4 control-label text-main accessToken"><%= @user.school.name %></label>
+            </div>
+          <% else %>
+            <div class="col-sm-8">
+              <div class="dropdown select school">
+                <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <span class="value"><%= @user.school.try(:name) || @schools.first.name %></span>
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-right">
+                  <% @schools.each do |school| %>
+                    <li><a href="javascript:" data-id="<%= school.id %>"><%= school.name %></a></li>
                   <% end %>
                 </ul>
               </div>
@@ -82,9 +105,14 @@
 
 <script>
   $(document).ready(function(){
-    $('.dropdown.select.userRole ul > li > a').click(function(){
+    $('.dropdown.select ul > li > a').click(function(){
       var id = $(this).data('id');
-      $('#roleField').val(id);
+      if($(this).closest('.form-group').hasClass('role'))
+      {
+        var roleName = $(this).data('name');
+        $('.form-group.school').toggleClass('hidden', roleName.indexOf('Teacher') == -1, 3000);
+      }
+      $(this).closest('.form-group').find('input[type="hidden"]').val(id);
     });
   });
 </script>
