--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -115,7 +115,7 @@
         </div>
         <div class="row text-center actions">
           <div class="col-md-<%= @kid.persisted? ? '7' : '6' %> col-md-offset-3">
-            <%= link_to 'Cancel', kids_path, class: 'btn btn-large btn-warning btn-wide btn-simple' %>
+            <%= link_to 'Cancel', dashboard_classroom_path(classroom: @kid.classroom.try(:id)), class: 'btn btn-large btn-warning btn-wide btn-simple' %>
             <% if @kid.persisted? %>
               <%= link_to 'Delete', @kid, method: :delete,  class: 'btn btn-danger btn-large btn-wide btn-simple' %>
               <%= f.submit 'Confirm', class: 'btn btn-info btn-large btn-wide btn-simple' %>
