#86 - update html of classrooms views;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,5 +43,6 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .text-info {color:$color-info;}
 .centered{text-align:center;}
 .righty{float:right;}
+.v-top {vertical-align:top;}
 .form-vpad {padding-top:100px; padding-bottom:80px;}
 textarea {resize:none;}
